2012-11-21 John Wu <John dot Wu at ACM dot org>
	* examples/ardea.cpp: add timer to main to report the total
	elapsed time within main, minor adjustment to print out about the
	input parameters to make it clear that no output to disk with the
	option -d is not specified

2012-11-15 John Wu <John dot Wu at ACM dot org>
	* configure.ac: mark the current source code as ibis1.3.4

2012-11-13 John Wu <John dot Wu at ACM dot org>
	* src/util.cpp:619,686 split the test for delimiter from the test
	for null terminators in readInt and readUInt to address a problem
	reported by Michael Beauregard
	* src/twister.h:55 record the return value from fread to avoid
	complaints from GCC compilers

2012-11-11 John Wu <John dot Wu at ACM dot org>
	* src/meshQuery.cpp:6572 jy1 should have been jy0

2012-11-08 John Wu <John dot Wu at ACM dot org>
	* src/bitvector.h, src/bitvector.cpp: add function
	bitvector::operator<
	* src/bitvector.cpp:895 move casting operator inside the
	parenthesis to correct a problem with converting -1 to a large
	positive number (which leads to a very long delay in the function
	bitvector::erase)

2012-11-02 John Wu <John dot Wu at ACM dot org>
	* src: replace compiler macros linux with __linux__, sun with
	__sun, and unix with __unix__ to conform to the C standard
	requirement on machine specific predefined macros (based on a
	report from Hari Krishnan)
	* src/capi.h, examples/tcapi.c, java/FastBit.c: change C++
	comments to C-style comments (to compile with gcc -ansi)

2012-10-29 John Wu <John dot Wu at ACM dot org>
	* src/bord.h: expand functions copyValue, column::equal_to,
	column::less_than and column::append to handle string values (to
	address a problem raised by Andrew Olson)

2012-10-28 John Wu <John dot Wu at ACM dot org>
	* configure.ac: use /usr/libexec/java_home to determine the home
	directory of java when it is present (to enable the option
	--with-java to locate the latest version of java through
	java_home)